fixed overflow

--- a/src/components/SearchBar/styles/ReactAutosuggestStyles.scss
+++ b/src/components/SearchBar/styles/ReactAutosuggestStyles.scss
@@ -1,7 +1,7 @@
 @import "../../../variables.scss";
 
-$search-bar-width: 400px;
-$search-bar-width-phone: 200px;
+$search-bar-width: 300px;
+$search-bar-width-phone: 100px;
 $suggestion-padding-width: 10px;
 
 .react-autosuggest__container {
